--- a/Reversi/Reversi.csproj
+++ b/Reversi/Reversi.csproj
@@ -72,6 +72,7 @@
       <DependentUpon>Tile.xaml</DependentUpon>
     </Compile>
     <Compile Include="Enums\AIStrategies.cs" />
+    <Compile Include="Enums\AlgorithmsEnum.cs" />
     <Compile Include="Enums\TileStateEnum.cs" />
     <Compile Include="Logic\PawnLightModel.cs" />
     <Compile Include="Logic\MinMaxPlayer.cs" />
