--- a/Reversi/Reversi.csproj
+++ b/Reversi/Reversi.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Enums\AIStrategies.cs" />
     <Compile Include="Enums\AlgorithmsEnum.cs" />
     <Compile Include="Enums\TileStateEnum.cs" />
+    <Compile Include="Logic\AlfaBetaPlayer.cs" />
     <Compile Include="Logic\PawnLightModel.cs" />
     <Compile Include="Logic\MinMaxPlayer.cs" />
     <Compile Include="Logic\Node.cs" />
